# IntrinsicAI

./: .gitignore  README.md
.beads/: metadata.json
MainApp/: .gitignore  README.md  pubspec.yaml
MainApp/lib/: main.dart
MainApp/lib/core/ai/: gemini_oauth_config.dart
MainApp/lib/core/analysis/: math_core.dart  rule1_analyzer.dart
MainApp/lib/core/config/: app_config.dart
MainApp/lib/core/database/: database_service.dart
MainApp/lib/features/analysis/: analysis_screen.dart
MainApp/lib/features/home/: home_screen.dart
MainApp/linux/: CMakeLists.txt
MainApp/linux/runner/: my_application.cc
MainApp/macos/Runner.xcodeproj/: project.pbxproj
MainApp/test/: widget_test.dart
MainApp/windows/: CMakeLists.txt
MainApp/windows/runner/: Runner.rc  main.cpp
Updater/: .env.example  .gitignore  README.md  pyproject.toml  update.py
Updater/data/debug/: AAPL.US_raw.json  TSLA.US_raw.json
Updater/src/: __init__.py  ceo_letters.py  db.py  eodhd_client.py  ingest.py  sec_edgar.py
Updater/tests/: conftest.py  test_ingest_fixtures.py  test_network_retry.py
Updater/tests/fixtures/ingest/: conflicting_payload_first.json  conflicting_payload_second.json  malformed_payload.json  normal_payload.json  sparse_payload.json
docs/benchmarks/: README.md  rule1_benchmark_ticker_set_v1.json
docs/specs/: benchmark-ticker-set-v1.md  data-quality-confidence-policy-v1.md  investment-confidence-model-v1.md  roic-gurufocus-calibration-plan-v1.md  rule1-formula-spec-v1.md
docs/templates/: roic-gurufocus-comparison-template.csv  roic-gurufocus-comparison-template.md
(+23 files in other folders)
